refactor(java8): language downgrade to Java 8 (P-B7 step 1)
Mechanical, no behaviour change, done on the 1.17.1 API so it can be reused for 1.16.3:
- records -> final classes with the same constructor and accessors (x() kept; equals/hashCode kept
  where a record was a set element: ServerBlockPlacer.DelayedEntry, PlacementTemplates.Template)
- switch expressions / arrow cases -> colon switches
- instanceof patterns -> casts
- var -> explicit types (types taken from javac attribution)
- List/Set/Map.of, copyOf -> Collections/Arrays equivalents (unmodifiable where the original was)
- Java 9+ APIs: Stream.toList, Optional.isEmpty/or, ServiceLoader.findFirst/stream,
  Files.readString/writeString, String.strip/isBlank

Checked: common + fabric (main, test, gametest, smoketest) compile with javac --release 8 against
the 1.17.1 classpath; forge sources show no Java 9+ errors beyond the 1.17-only APIs the port replaces.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>