@@ -2,10 +2,12 @@ package sophisticated.building.smoketest.backpack;
 
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.item.ItemStack;
+import sophisticated.building.smoketest.SmokeTest;
 
 import javax.annotation.Nullable;
+import java.util.List;
 import java.util.Optional;
-import java.util.ServiceLoader;
+import java.util.stream.Collectors;
 
 /**
  * Loader glue for an accessory slot mod (Curios, Trinkets, Accessories) that a backpack can be worn in, registered in
@@ -15,17 +17,16 @@ public interface SmokeAccessorySlots {
 
     /** The first registered implementation whose mod is loaded, or empty. */
     static Optional<SmokeAccessorySlots> find() {
-        return ServiceLoader.load(SmokeAccessorySlots.class, SmokeAccessorySlots.class.getClassLoader()).stream()
-                .map(ServiceLoader.Provider::get)
+        return SmokeTest.allServices(SmokeAccessorySlots.class).stream()
                 .filter(SmokeAccessorySlots::isAvailable)
                 .findFirst();
     }
 
     /** Why {@link #find()} is empty: the registered implementations and whether their mod is loaded. */
     static String whyUnavailable() {
-        var providers = ServiceLoader.load(SmokeAccessorySlots.class, SmokeAccessorySlots.class.getClassLoader()).stream()
-                .map(provider -> provider.type().getSimpleName() + (provider.get().isAvailable() ? "" : " (its mod is not loaded)"))
-                .toList();
+        List<String> providers = SmokeTest.allServices(SmokeAccessorySlots.class).stream()
+                .map(slots -> slots.getClass().getSimpleName() + (slots.isAvailable() ? "" : " (its mod is not loaded)"))
+                .collect(Collectors.toList());
         return providers.isEmpty() ? "no accessory slot mod glue (Curios/Trinkets/Accessories) in this runtime"
                 : "no accessory slot mod in this runtime: " + providers;
     }
