@@ -4,6 +4,9 @@ import org.junit.jupiter.api.Test;
 import sophisticated.building.systems.ItemUsageTracker;
 import sophisticated.building.utilities.TemplateSelector;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -37,11 +40,11 @@ class TemplateSelectorTest {
 
 	@Test
 	void threeFilledBoxesInDifferentSlotsAreEachUsedOnce() {
-		var held = new FakeStack(1, true);
-		var slot5 = new FakeStack(1, true);
-		var slot20 = new FakeStack(1, true);
-		var candidates = List.of(held, slot5, slot20);
-		var selector = selector();
+		FakeStack held = new FakeStack(1, true);
+		FakeStack slot5 = new FakeStack(1, true);
+		FakeStack slot20 = new FakeStack(1, true);
+		List<FakeStack> candidates = Arrays.asList(held, slot5, slot20);
+		TemplateSelector<FakeStack> selector = selector();
 
 		assertSame(held, placeOne(selector, candidates, held, 0));
 		assertSame(slot5, placeOne(selector, candidates, held, 0));
@@ -53,10 +56,10 @@ class TemplateSelectorTest {
 
 	@Test
 	void plainStackIsReservedUntilUsedUpThenStackWithDataFollows() {
-		var plain = new FakeStack(2, false);
-		var filled = new FakeStack(1, true);
-		var candidates = List.of(plain, filled);
-		var selector = selector();
+		FakeStack plain = new FakeStack(2, false);
+		FakeStack filled = new FakeStack(1, true);
+		List<FakeStack> candidates = Arrays.asList(plain, filled);
+		TemplateSelector<FakeStack> selector = selector();
 
 		assertSame(plain, placeOne(selector, candidates, null, 0));
 		assertSame(plain, placeOne(selector, candidates, null, 0));
@@ -68,20 +71,20 @@ class TemplateSelectorTest {
 
 	@Test
 	void heldStackWithDataComesBeforePlainStacks() {
-		var held = new FakeStack(1, true);
-		var plain = new FakeStack(64, false);
-		var selector = selector();
+		FakeStack held = new FakeStack(1, true);
+		FakeStack plain = new FakeStack(64, false);
+		TemplateSelector<FakeStack> selector = selector();
 
-		assertSame(held, placeOne(selector, List.of(held, plain), held, 0));
-		assertSame(plain, placeOne(selector, List.of(held, plain), held, 0));
+		assertSame(held, placeOne(selector, Arrays.asList(held, plain), held, 0));
+		assertSame(plain, placeOne(selector, Arrays.asList(held, plain), held, 0));
 	}
 
 	@Test
 	void anchorKeepsOneHeldPlainItemOutOfSelection() {
-		var held = new FakeStack(2, false);
-		var filled = new FakeStack(1, true);
-		var candidates = List.of(held, filled);
-		var selector = selector();
+		FakeStack held = new FakeStack(2, false);
+		FakeStack filled = new FakeStack(1, true);
+		List<FakeStack> candidates = Arrays.asList(held, filled);
+		TemplateSelector<FakeStack> selector = selector();
 
 		assertSame(held, placeOne(selector, candidates, held, 1));
 		assertSame(filled, placeOne(selector, candidates, held, 1));
@@ -90,46 +93,55 @@ class TemplateSelectorTest {
 
 	@Test
 	void anchorDoesNotApplyToStackWithData() {
-		var held = new FakeStack(1, true);
-		var selector = selector();
+		FakeStack held = new FakeStack(1, true);
+		TemplateSelector<FakeStack> selector = selector();
 
-		assertSame(held, placeOne(selector, List.of(held), held, 1));
+		assertSame(held, placeOne(selector, Arrays.asList(held), held, 1));
 	}
 
 	@Test
 	void returnsNullWhenNothingIsLeftSoTheBackpackPathIsUsed() {
-		var plain = new FakeStack(1, false);
-		var selector = selector();
+		FakeStack plain = new FakeStack(1, false);
+		TemplateSelector<FakeStack> selector = selector();
 
-		assertSame(plain, placeOne(selector, List.of(plain), null, 0));
-		assertNull(placeOne(selector, List.of(plain), null, 0));
-		assertNull(selector().select(List.of(), null, 0));
+		assertSame(plain, placeOne(selector, Arrays.asList(plain), null, 0));
+		assertNull(placeOne(selector, Arrays.asList(plain), null, 0));
+		assertNull(selector().select(Collections.emptyList(), null, 0));
 	}
 
 	@Test
 	void failedPlacementWithDataStackReusesTheSameStack() {
-		var filled = new FakeStack(1, true);
-		var selector = selector();
+		FakeStack filled = new FakeStack(1, true);
+		TemplateSelector<FakeStack> selector = selector();
 
 		// Nothing consumed when placing failed, so the same stack is still the template
-		assertSame(filled, selector.select(List.of(filled), null, 0));
-		assertSame(filled, selector.select(List.of(filled), null, 0));
+		assertSame(filled, selector.select(Arrays.asList(filled), null, 0));
+		assertSame(filled, selector.select(Arrays.asList(filled), null, 0));
 	}
 
 	@Test
 	void bulkRemovalSubtractsIndividuallyConsumedItems() {
-		Map<String, Integer> placed = Map.of("shulker", 3, "stone", 10, "sack", 2);
-		Map<String, Integer> consumed = Map.of("shulker", 3, "sack", 1);
+		Map<String, Integer> placed = counts("shulker", 3, "stone", 10, "sack", 2);
+		Map<String, Integer> consumed = counts("shulker", 3, "sack", 1);
 
-		var bulk = ItemUsageTracker.subtractCounts(placed, consumed);
+		Map<String, Integer> bulk = ItemUsageTracker.subtractCounts(placed, consumed);
 
-		assertEquals(Map.of("stone", 10, "sack", 1), bulk);
+		assertEquals(counts("stone", 10, "sack", 1), bulk);
 	}
 
 	@Test
 	void bulkRemovalNeverGoesNegative() {
-		var bulk = ItemUsageTracker.subtractCounts(Map.of("shulker", 1), Map.of("shulker", 2, "other", 5));
+		Map<String, Integer> bulk = ItemUsageTracker.subtractCounts(counts("shulker", 1), counts("shulker", 2, "other", 5));
 
 		assertTrue(bulk.isEmpty());
+	}
+
+	/** Map.of for String counts (Java 8). */
+	private static Map<String, Integer> counts(Object... keysAndValues) {
+		Map<String, Integer> map = new HashMap<>();
+		for (int i = 0; i < keysAndValues.length; i += 2) {
+			map.put((String) keysAndValues[i], (Integer) keysAndValues[i + 1]);
+		}
+		return map;
 	}
 }
