@@ -6,6 +6,7 @@ import net.minecraftforge.fml.ModList;
 import sophisticated.building.SophisticatedBuilding;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -23,7 +24,7 @@ public class CuriosCompatHelper {
     public static boolean isCuriosLoaded() {
         if (curiosLoaded == null) {
             try {
-                var modList = ModList.get();
+                ModList modList = ModList.get();
                 if (modList != null) {
                     curiosLoaded = modList.isLoaded("curios");
                 } else {
@@ -46,13 +47,13 @@ public class CuriosCompatHelper {
      */
     public static List<ItemStack> getBackpacksFromCurios(Player player) {
         if (!isCuriosLoaded()) {
-            return List.of();
+            return Collections.emptyList();
         }
         try {
             return CuriosInternalHelper.getBackpacksFromCurios(player);
         } catch (NoClassDefFoundError | Exception e) {
             SophisticatedBuilding.logger.debug("Error accessing Curios slots: {}", e.getMessage());
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
@@ -94,7 +95,7 @@ public class CuriosCompatHelper {
                 top.theillusivec4.curios.api.CuriosApi.getCuriosHelper().getCuriosHandler(player).ifPresent(curiosHandler -> {
                     // Check all equipped curios for any backpack items
                     curiosHandler.getCurios().forEach((identifier, stacksHandler) -> {
-                        var stacks = stacksHandler.getStacks();
+                        top.theillusivec4.curios.api.type.inventory.IDynamicStackHandler stacks = stacksHandler.getStacks();
                         for (int i = 0; i < stacks.getSlots(); i++) {
                             ItemStack stack = stacks.getStackInSlot(i);
                             if (!stack.isEmpty() && isBackpackItem(stack) && !processed.contains(stack)) {
